--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>To do List</title>
-  <script src="scripts.js" defer></script>
+    <meta charset="UTF-8">
+    <title>To do List</title>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
 
 <ul id="todoList"></ul>
 
-<input id="msgInput" type="text" placeholder="Введите сообщение"/>
+<label><input id="msgInput" type="text" placeholder="Введите сообщение"/></label>
 
 <button id="msgButton">Отправить</button>
 
