--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Contacts list</title>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
+
+<table id="contactsTable">
+
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Surname</th>
+        <th>Phone</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr>
+        <td><label><input type="text" id="nameInput"></label></td>
+        <td><label><input type="text" id="surnameInput"></label></td>
+        <td><label><input type="tel" id="phoneInput"></label></td>
+        <td>
+            <button type="button" onclick="addContact()">Add Contact</button>
+        </td>
+    </tr>
+    </tbody>
+
+</table>
 
 </body>
 </html>
