--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <td><label><input type="text" id="surnameInput"></label></td>
         <td><label><input type="tel" id="phoneInput"></label></td>
         <td>
-            <button type="button" onclick="addContact()">Add Contact</button>
+            <button type="button" id="actionButton">Add Contact</button>
         </td>
     </tr>
     </tbody>
