--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contacts list</title>
+    <title>To do list v.2</title>
     <script src="scripts.js" defer></script>
 </head>
 <body>
 
-<ul id="todoList"></ul>
+<div id="rootDiv">
+    <ul id="todoList"></ul>
 
-<label><input id="msgInput" type="text" placeholder="Введите сообщение"/></label>
+    <label><input id="msgInput" type="text" placeholder="Введите сообщение"/></label>
 
-<button id="msgButton">Отправить</button>
+    <button id="msgButton">Отправить</button>
+</div>
 
 </body>
 </html>
