--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="rootDiv">
+<div>
     <ul id="todoList"></ul>
 
     <label><input id="msgInput" type="text" placeholder="Введите сообщение"/></label>
