--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
     <script src="scripts.js" defer></script>
 </head>
 <body>
+
+<div id="tabs" class="tabs">
+    <nav>
+        <button class="nav-item" data-tab-target="#tab-1">One</button>
+        <button class="nav-item" data-tab-target="#tab-2">Two</button>
+        <button class="nav-item" data-tab-target="#tab-3">Three</button>
+    </nav>
+    <div class="content">
+        <div class="tab-content" id="tab-1">Content 1</div>
+        <div class="tab-content" id="tab-2">Content 2</div>
+        <div class="tab-content" id="tab-3">Content 3</div>
+    </div>
+</div>
+
 
 </body>
 </html>
