--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Tabs widget</title>
-    <script src="scripts.js" defer></script>
+    <title>Tabs widget</title>
     <link rel="stylesheet" href="style.css">
+    <script src="tabs.js" defer></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
 
-<div id="tabs" class="tabs">
+<div id="tabs">
     <nav>
-        <button class="nav-item" data-tab-target="#tab-1">One</button>
-        <button class="nav-item" data-tab-target="#tab-2">Two</button>
-        <button class="nav-item" data-tab-target="#tab-3">Three</button>
+        <button>One</button>
+        <button>Two</button>
+        <button>Three</button>
     </nav>
-    <div class="content">
-        <div class="tab-content" id="tab-1">Content 1</div>
-        <div class="tab-content" id="tab-2">Content 2</div>
-        <div class="tab-content" id="tab-3">Content 3</div>
+
+    <div>
+        <div>Content 1</div>
+        <div>Content 2</div>
+        <div>Content 3</div>
     </div>
 </div>
 
