--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tabs widget</title>
+    <title>GitHub API</title>
+    <link rel="stylesheet" href="style.css">
     <script src="scripts.js" defer></script>
 </head>
 <body>
+
+<div>
+
+    <label><input id="msgInput" type="text" placeholder="GIT username"/></label>
+
+    <button id="findUserBtn">Find</button>
+
+    <div id="usersDataContainer"></div>
+</div>
 
 </body>
 </html>
