--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Todo list + server</title>
+    <script src="TodoApi.js" defer></script>
     <script src="scripts.js" defer></script>
 </head>
 <body>
@@ -16,6 +17,7 @@
     <label><input id="msgInput" type="text" placeholder="Введите сообщение"/></label>
 
     <button id="msgButton">Отправить</button>
+
 </div>
 
 </body>
