--- a/index.html
+++ b/index.html
@@ -12,29 +12,26 @@
 </head>
 <body>
 
-<table id="contactsTable">
+<form id="contactForm">
+    <input type="hidden" id="id" class="formInput">
+    <label><input type="text" id="name" class="formInput"></label>
+    <label><input type="text" id="lastName" class="formInput"></label>
+    <label><input type="tel" id="phone" class="formInput"></label>
 
-    <thead>
+    <button>Save contact</button>
+
+</form>
+
+<table>
     <tr>
         <th>Name</th>
-        <th>Surname</th>
+        <th>Last name</th>
         <th>Phone</th>
         <th>Actions</th>
     </tr>
-    </thead>
 
-    <tbody id="ContactsList"></tbody>
+    <tbody id="contactsContainer"></tbody>
 
-    <tbody>
-    <tr id="contactInputs">
-        <td><label><input type="text" id="nameInput"></label></td>
-        <td><label><input type="text" id="surnameInput"></label></td>
-        <td><label><input type="tel" id="phoneInput"></label></td>
-        <td>
-            <button type="button" id="actionButton">Add contact</button>
-        </td>
-    </tr>
-    </tbody>
 </table>
 
 </body>
