--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Contacts list + server</title>
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js" defer></script>
-    <script src="ContactsApi.js"></script>
+    <script src="contactsApi.js"></script>
 </head>
 <body>
 
