--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Gallery</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="galleryAPI.js"></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
 
-<h1>GALLERY</h1>
+<section>
 
-<div class="gallery">
+    <h1 class="gallery">Gallery</h1>
 
-    <div class="gallery_albums"></div>
+    <div class="gallery">
 
-    <div class="gallery_photos"></div>
-</div>
+        <div class="gallery_albums"></div>
+
+        <div class="gallery_photos"></div>
+
+    </div>
+
+</section>
 
 </body>
 </html>
