--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <label>Message: <input type="text" id="message"> </label>
 
-    <button>Send message</button>
+    <button type="submit">Send message</button>
 
-    <button class="clearBtn">Clear chat</button>
+    <button type="button" class="clearBtn">Clear chat</button>
 </form>
 
 <div id="messageContainer"></div>
